Add ability to read term name on upload

--- a/term.html
+++ b/term.html
@@ -15,8 +15,8 @@
         <button class="home-btn" onclick="location.href='index.html';"><i class="fa fa-home"></i> Home</button>
         <div class = "center">
              <!-- Term Label -->
-            <label for="Term" class="term-label">Term:  </label>
-            <input type="text" id="term" placeholder="Enter Term (Eg. Spring 2023)">
+            <label for="term-name" class="term-label">Term:  </label>
+            <input type="text" id="term-name" placeholder="Enter Term (Eg. Spring 2023)">
             <label id="num-apps" class="num-apps-label"></label>
             <!-- Table -->
             <table class="content-table" id ="table">
