--- a/term.html
+++ b/term.html
@@ -67,7 +67,7 @@
         <!-- Make sure this remains on the very bottom-->
         <div id="overlay"></div>
     </body>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="js/term.js"></script>
 
